Add /api/v3/district/<abbr> endpoint
