# src/backend/api/handlers/district.py
@@ -12,10 +12,30 @@ from backend.api.handlers.helpers.profiled_jsonify import profiled_jsonify
 from backend.api.handlers.helpers.track_call import track_call_after_response
 from backend.common.consts.api_version import ApiMajorVersion
 from backend.common.decorators import cached_public
-from backend.common.models.keys import DistrictKey
-from backend.common.queries.district_query import DistrictQuery, DistrictsInYearQuery
+from backend.common.models.keys import DistrictAbbreviation, DistrictKey
+from backend.common.queries.district_query import (
+    DistrictAbbreviationQuery,
+    DistrictQuery,
+    DistrictsInYearQuery,
+)
 from backend.common.queries.event_query import DistrictEventsQuery
 from backend.common.queries.team_query import DistrictTeamsQuery
+
+
+# @api_authenticated
+# @cached_public
+def district_history(district_abbreviation: DistrictAbbreviation) -> Response:
+    """
+    Returns a list of District objects with the given district abbreviation. Accounts for abbreviation changes.
+    """
+    track_call_after_response("district", district_abbreviation)
+
+    districts = DistrictAbbreviationQuery(
+        abbreviation=district_abbreviation
+    ).fetch_dict(ApiMajorVersion.API_V3)
+
+    districts.sort(key=lambda x: x["year"])
+    return profiled_jsonify(districts)
 
 
 @api_authenticated
