# src/backend/api/main.py
@@ -16,6 +16,7 @@ from backend.api.handlers.client_api import (
     update_model_preferences,
 )
 from backend.api.handlers.district import (
+    district_history,
     district_events,
     district_list_year,
     district_rankings,
@@ -120,6 +121,9 @@ CORS(
 api_v3.add_url_rule("/status", view_func=status)
 
 # District
+api_v3.add_url_rule(
+    "/district/<string:district_abbreviation>/history", view_func=district_history
+)
 api_v3.add_url_rule("/district/<string:district_key>/events", view_func=district_events)
 api_v3.add_url_rule(
     "/district/<string:district_key>/events/<model_type:model_type>",
@@ -290,21 +294,27 @@ CORS(
     methods=["OPTIONS", "POST"],
     allow_headers=["Content-Type", "X-TBA-Auth-Id", "X-TBA-Auth-Sig"],
 )
-trusted_api.add_url_rule(
-    "/event/<string:event_key>/alliance_selections/update",
-    methods=["POST"],
-    view_func=update_event_alliances,
-),
-trusted_api.add_url_rule(
-    "/event/<string:event_key>/awards/update",
-    methods=["POST"],
-    view_func=update_event_awards,
-),
-trusted_api.add_url_rule(
-    "/event/<string:event_key>/info/update",
-    methods=["POST"],
-    view_func=update_event_info,
-),
+(
+    trusted_api.add_url_rule(
+        "/event/<string:event_key>/alliance_selections/update",
+        methods=["POST"],
+        view_func=update_event_alliances,
+    ),
+)
+(
+    trusted_api.add_url_rule(
+        "/event/<string:event_key>/awards/update",
+        methods=["POST"],
+        view_func=update_event_awards,
+    ),
+)
+(
+    trusted_api.add_url_rule(
+        "/event/<string:event_key>/info/update",
+        methods=["POST"],
+        view_func=update_event_info,
+    ),
+)
 trusted_api.add_url_rule(
     "/event/<string:event_key>/matches/update",
     methods=["POST"],
